--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://localhost/next-amazona
+MONGODB_URI=mongodb://localhost:27017/Brida
 JWT_SECRET=somethingsecret
 PAYPAL_CLIENT_ID=yourid
